Bug 372232 - make <textPath> work when referencing <path> which is a direct child of the outer <svg>.  r=jwatt, sr=roc, a=dveditz